[package]
name = "nethole"
version = "0.1.0"
authors = ["Rimpampa <riccardo.ripanti01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcp = { git = "https://github.com/Rimpampa/pcp-rs" }
winapi = { version = "0.3.9", features = ["iphlpapi", "winerror", "ifdef"] }
nix = "0.18.0"
hex = "0.4.2"
thiserror = "1.0.20"
cfg-if = "0.1.10"